# zephyr-generic-example

./: CMakeLists.txt  README.md  west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  prj.conf
app/config/: memfault_metrics_heartbeat_config.def
app/src/: internal_flash_coredump_storage.c  main.c  memfault_platform_config.h
